# otel-platform-lab

./: .gitignore  Makefile  README.md
apps/offpeak-api/deploy/: deployment.yaml  httpscaledobject.yaml  service.yaml
apps/sample-api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/sample-api/app/: main.py
apps/sample-api/deploy/: deployment.yaml  scaledobject.yaml  service.yaml
docs/: ARCHITECTURE.md  VERIFICATION.md  scenarios.md  signal-strategy.md
docs/adr/: 001-lgtm-stack.md  002-collector-as-single-ingress.md  003-argocd-from-day-one.md  004-bootstrap-argocd-with-helm.md  005-webhook-cert-without-cert-manager.md  006-grafana-backend-database.md  007-grafana-datasource-provisioning.md  008-tempo-chart-from-grafana-community.md  009-collector-topology-gateway-deployment.md  010-operator-injection-templates-folder.md  011-loki-chart-from-grafana-community.md  012-logs-via-otlp-not-node-filelog.md  013-mimir-distributed-ingest-storage.md  014-metrics-via-otlp-push-not-remote-write.md  015-span-metrics-via-collector-spanmetrics-connector.md  016-webhook-cert-via-cert-manager.md  017-metrics-alerting-via-mimir-ruler.md  018-platform-health-via-k8s-cluster-receiver.md  019-optional-agent-tier-for-node-local-log-filtering.md  020-autoscaling-via-keda-prometheus-scaler.md  021-scale-to-zero-via-keda-http-addon.md
k8s/argocd/: root-app.yaml
k8s/argocd/applications/: alert-sink.yaml  cert-manager.yaml  collector-agent.yaml  collector.yaml  grafana-dashboards.yaml  grafana.yaml  keda-http-addon.yaml  keda.yaml  loki.yaml  mimir.yaml  (+6 more)
scripts/: verify.sh
(+24 files in other folders)
